job card overflow fix

--- a/frontend/css/startupLogin.css
+++ b/frontend/css/startupLogin.css
@@ -350,13 +350,13 @@ ul li {
 .jobbox {
   display: flex;
   padding: 0px;
-  margin: 10px;
-  max-width: 200px;
+  margin: 0px;
+ max-width: 180px;
   height: 290px;
   background: #f6f6f6;
 }
 .jobbox:hover {
-  transform: scale(1.05);
+  transform: scale(1.08);
 }
 
 .imageadd {
@@ -364,17 +364,27 @@ ul li {
   position: absolute;
   top: 0px;
   left: 0px;
-  height: 30%;
+  height: 50%;
   width: 100%;
-  padding: 10px;
+  /* padding: 10px; */
+  
   /* margin-bottom: 00px; */
   border-radius: 10px 10px 0px 0px;
   border: 1px solid grey;
+  overflow-wrap: anywhere;
+}
+.box-desc{
+  padding: 25px 0px;
+}
+.it1{
+ padding-top: 8px;
+ overflow-wrap: break-word;
 }
 .it {
   position: relative;
   top: 100px;
-  padding: 3px 5px;
+  padding: 3px 5px ;
+  overflow-wrap: anywhere;
 }
 .button {
   position: relative;
@@ -729,3 +739,9 @@ ul li {
   box-shadow: 0px 0px 1px 1px grey;
 }
 /* -------------end--------------- */
+/*  */
+
+
+.wrapper{
+  overflow: hidden;
+}
